Complete the base of HTML

--- a/index.html
+++ b/index.html
@@ -17,7 +17,32 @@
         <h2>New Activity</h2>
       </div>
       <section>
-
+        <div>
+          <h3> Select a category:</h3>
+        </div>
+        <section>
+          <img src="./assets/study.svg" alt="study-icon">
+          <h4>Study</h4>
+        </section>
+        <section>
+          <img src="./assets/meditate.svg" alt="meditate-icon">
+          <h4>Meditate</h4>
+        </section>
+        <section>
+          <img src="./assets/exercise.svg" alt="exercise-icon">
+          <h4>Exercise</h4>
+        </section>
+      </section>
+      <form>
+        <label for="accomplishment">What would you like to accomplish during this time? </label>
+        <input type="text" maxlength="60" name="accomplishment">
+        <div>
+          <label for="minutes">Minutes</label>
+          <input type="time" name="minutes">
+          <label for="seconds">Seconds</label>
+          <input type="time" name="seconds">
+        </div>
+        <button type="submit" disabled>START ACTIVITY</button>
     </main>
     <aside>
       <div>
