Make small change to remove blank line

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <input type="time" name="seconds">
         </div>
         <button type="submit" disabled>START ACTIVITY</button>
+      </form>
     </main>
     <aside>
       <div>
@@ -53,7 +54,6 @@
         <p> Complete the form to the left to get started!</p>
       </section>
     </aside>
-
   <script type="text/javascript" src="Activity.js"></script>
   <script type="text/javascript" src="main.js"></script>
   </body>
